# crossmux-usb-sd

./: .gitignore  README.md  README.zh-CN.md  USER_GUIDE.md  platformio.ini  simulator.sh
.skills/: SKILL.md
docs/: file-formats.md  i18n.md  webserver-endpoints.md
docs/engineering/: architecture-and-patterns.md  cache-management.md  chinese-build.md  device-variants.md  index.md
lib/EpdFont/builtinFonts/: all.h  notosans_cjk_10.h  notosans_cjk_16.h  notosans_cjk_18.h  notosans_cjk_8.h
lib/EpdFont/scripts/: build-cn-builtin-fonts.sh  build-font-ids.sh  cn_i18n_chars.txt  convert-builtin-fonts.sh
lib/Epub/: Epub.cpp  Epub.h
lib/Epub/Epub/: BookMetadataCache.cpp  ParsedText.cpp  Section.cpp
lib/GfxRenderer/: GfxRenderer.cpp  GfxRenderer.h
lib/I18n/: I18n.cpp  I18n.h
lib/I18n/translations/: belarusian.yaml  catalan.yaml  chinese.yaml  czech.yaml  danish.yaml  dutch.yaml  english.yaml  finnish.yaml  (+19 more)
lib/KOReaderSync/: ProgressMapper.cpp
lib/ZipFile/: ZipFile.h
scripts/: gen_i18n.py
simulator/: .gitignore  CMakeLists.txt  README.md  missing_symbols.cpp  simulator_compile_check.cpp  simulator_config.h  simulator_main.cpp  simulator_main_wasm.cpp  simulator_window.cpp  simulator_window.h
simulator/arduino-host/: CMakeLists.txt  README.md
simulator/arduino-host/examples/blink_headless/: CMakeLists.txt  main.cpp
simulator/arduino-host/include/: Arduino.h  HardwareSerial.h  Print.h  SPI.h  Stream.h  WString.h  Wire.h  esp32-hal-cpu.h  esp32-hal-gpio.h  esp_random.h  esp_sleep.h  esp_sntp.h  esp_system.h  esp_wifi.h
simulator/arduino-host/include/freertos/: FreeRTOS.h  portmacro.h  queue.h  semphr.h  task.h
simulator/arduino-host/src/: arduino_runtime.cpp  esp_system.cpp  freertos_pthread.cpp  hardware_serial.cpp  print.cpp  stream.cpp
simulator/arduino-host/tests/: CMakeLists.txt  test_runtime.cpp
simulator/hal/: HalDisplay.cpp
simulator/hal_native/: HalDisplay_native.cpp  HalGPIO_native.cpp
simulator/hal_wasm/: HalDisplay_wasm.cpp  HalGPIO_wasm.cpp
simulator/shims/: BatteryMonitor.h  EInkDisplay.h  HTTPClient.h  InputManager.h  JPEGDEC.h  MD5Builder.h  NetworkClient.h  NetworkUdp.h  PNGdec.h  SDCardManager.h  WebServer.h  WebSocketsServer.h  WiFi.h  base64.h  esp_crt_bundle.h  esp_err.h  esp_http_client.h  esp_ota_ops.h  qrcode.h
simulator/shims_wasm/: HTTPClient.h
src/: CrossPointSettings.cpp  CrossPointSettings.h  JsonSettingsIO.cpp  SettingsList.h  fontIds.h  main.cpp
src/activities/: ActivityManager.cpp  ActivityManager.h
src/network/: HttpDownloader.cpp  HttpDownloader.h
test/differential_rounding/: DifferentialRoundingTest.cpp
tools/: crossmux_copy.py  serial_sd.py
(+39 files in other folders)
